--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>hello world!</h1>
+<ng-template #heading>
+  <h1>Hello World!</h1>
+</ng-template>
+
+<app-heading [title]="heading"></app-heading>
