--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
 </ng-template>
 
 <app-heading [title]="heading"></app-heading>
+
+<app-projection>
+  <p>This content is projected.</p>
+</app-projection>
