--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,7 @@
 <app-projection>
   <p>This content is projected.</p>
 </app-projection>
+
+<app-expander heading="I am an expander header">
+  I am an expander content
+</app-expander>
