expander with injected content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
   <p>This content is projected.</p>
 </app-projection>
 
-<app-expander heading="I am an expander header">
+<app-expander heading="I am an expander header" open="true">
   I am an expander content
+</app-expander>
+
+<app-expander heading="Expand to see the current time">
+  <app-clock></app-clock>
 </app-expander>
